--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ main{
 section{
     margin: auto;
     border-radius: 3px;
+    border-top: 1px solid black;
     background-color: white;
     width: 100%;
     padding: 3px 0px;
@@ -103,6 +104,7 @@ footer{
 }
 
 footer > section{
+    border-top: 0;
     background-color: #4F5659;
     width: 100%;
     height: 100%;
