--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body{
     background-image: linear-gradient(to bottom , #727D87 , #B6C8D9  );
-    overflow-x: hidden;
+    overflow-x: auto;
 
 }
 /* Banner */
@@ -15,9 +15,9 @@ header{
     text-align: center;
 }
 
-header > img{
+header > picture > img{
     top: 0px;
-    width: 88%;
+    width: 80%;
     border-radius: 3px;
     box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.363);
 }
@@ -106,20 +106,21 @@ footer{
     background-color: #4F5659;
     color: white ;    
     width: 88%; 
-    min-width: 380px;
     border-radius: 3px;
     padding: 3px 0px;     
     margin: 3px auto;
     font-style: italic;
     font-size: 0.8em;
     display: flex;
-    flex-direction: row;   
+    flex-flow: row wrap;
+    align-content: flex-start;
+    justify-content: flex-start;
 }
 
 footer > section{
     background-color: #4F5659;    
-    width: 100%;
-    height: 100%;
+    width: 32%;
+    height: fit-content;
     border-top: 0;
     border-radius: 0;        
     padding: 0px 5px;
@@ -128,10 +129,20 @@ footer > section{
     text-align: center;   
 }
 
+@media screen and (max-width: 400px) {
+    footer {
+        flex-direction: column;
+    }
+
+    footer > section { 
+        width: 100%;
+        padding: 0;
+    }
+  }
+
 footer > section > ul{
     list-style: none;
     padding: 0;
-
 }
 
 footer > section > ul > li > a{
